--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                 <button id="example" onclick="tryExample();">Try an Example!</button>
             </span>
 
+            <div class="container">
+            <a href="https://github.com/dgross16/superdeepfakedetector.com">
+                <img id="gh" src="static/images/github_logo.png">
+            </a>
+            </div>
+
 
             <input style="display: none" type="file" id="input" name="file" accept="video/mp4">
 
